# wearable-fusion-auth-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_LOG.md  RESULTS.md  config.yaml  environment.yml  novelty_scan.md  pyproject.toml  reproduce.py  requirements.txt
data/: README.md
paper/: PAPER.md  build_pdf.py  main.tex  refs.bib
results/: RESULTS_all.csv  analysis_phase6.json  blasco2018_benchmark.csv  blasco2018_feature_qa.json  blasco2018_recordings.csv  blasco2018_summary.json  exam_stress_benchmark.csv  exam_stress_feature_qa.json  exam_stress_recordings.csv  exam_stress_summary.json  results_summary.json  robustness_phase6.json
src/wfab/: __init__.py  analysis.py  build_features.py  evaluation.py  feature_qa.py  features.py  make_figures.py  preprocess.py  repro.py  robustness.py  run_benchmark.py  schema.py  summarize_dataset.py
src/wfab/loaders/: __init__.py  blasco2018.py  exam_stress.py
tests/: test_blasco_loader.py  test_exam_stress_loader.py  test_features.py
