[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wfab"
version = "0.0.1"
description = "Honest cross-session benchmark of fast multi-signal wearable biometric authentication"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
